deployment/3-http-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-personalsite
  namespace: production-bishoysoliman
spec:
  rules:
  - host: bishoysoliman.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: personalsite
            port:
              number: 3000
