deployment/8-https-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-personalsite
  namespace: production-bishoysoliman
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-prod
spec:
  rules:
  - host: bishoysoliman.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: personalsite
            port:
              number: 3000
  tls:
  - hosts:
    - bishoysoliman.com
    secretName: express-bishoysoliman-com-tls
